# document_scanner_python

./: main.py  pyproject.toml  utils.py
